--- a/index.html
+++ b/index.html
@@ -4,68 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joffre - Portafolio</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/JS/java.js">
 </head>
 <body>
     <header>
-        <nav class="navega">
-            <a class="opciones" href="#sobre-mi">Sobre mí</a>
-            <a class="opciones" href="#social">Social</a>
-            <a class="opciones" href="#proyectos">Proyectos</a>
-            <a class="opciones" href="#cont">Contacto</a>
+        <nav class="nav">
+            <a class="opciones-nav" href="#sobre-mi">Sobre mí</a>
+            <a class="opciones-nav" href="#social">Social</a>
+            <a class="opciones-nav" href="#proyectos">Proyectos</a>
+            <a class="opciones-nav" href="#cont">Contacto</a>
         </nav>
     </header>
 
-    <main class="todo">
+    <main class="main">
         <section id="sobre-mi">
-            <img class="foto" src="/imagenes/perfil.jpg" alt="imagen de perfil">
+            <img class="foto-perf" src="/imagenes/perfil.jpg" alt="imagen de perfil">
             <article>
                 <h2>
                     <img class="logo1" src="/imagenes/pngwing.com.png" alt="">
                     <span>Joffre Angelo Gavidia Huamali</span>
                 </h2>
-                <p>Actualmente soy estudiante de Ingeniería de Sistemas en la <strong>Universidad de Huánuco (UDH)</strong>, me encuentro cursando el octavo ciclo. Además soy una persona responsable, con principios y valores, capaz de trabajar bajo presión y de ser útil en la labor que me confieren, con facilidad de expresión verbal y escrita.</p>
+                <p>Actualmente soy estudiante de Ingeniería de Sistemas en la 
+                    <strong>Universidad de Huánuco (UDH)</strong>, me encuentro cursando el octavo ciclo. 
+                    Además soy una persona responsable, con principios y valores, capaz de trabajar bajo presión y 
+                    de ser útil en la labor que me confieren, con facilidad de expresión verbal y escrita.</p>
             </article>
         </section>
         <section id="social">
             <h2>
                 <span>Social</span>
             </h2>
-            <nav class="popap">
-                <a class="opciones2" href="https://www.linkedin.com/in/joffre-angelo-gavidia-huamali-b317472b1/" target="_blank"> <img class="foto3" src="/imagenes/link.png" alt="">LinkedIn</a>
-                <a class="opciones2" href="/doc/CV.pdf" target="_blank">Descargar CV</a>
+            <nav class="opc-cont">
+                <a class="opciones-soci" href="https://www.linkedin.com/in/joffre-angelo-gavidia-huamali-b317472b1/" target="_blank"> <img class="logo3" src="/imagenes/link.png" alt="">LinkedIn</a>
+                <a class="opciones-soci" href="/doc/CV.pdf" target="_blank">Descargar CV</a>
             </nav>
         </section>
 
         <section id="proyectos">
             <h2>
-                <span>Proyectos</span>
+                <span>Proyecto web</span>
             </h2>
-               <section class="pro">
+            <section class="sec-pro">
+                <article>
+                    <img class="foto-pro" src="/imagenes/proyecto2.PNG" alt="imagen de perfil">
+                </article>
+                <div>
+                    <article class="nombre">
+                        <h2>
+                            PAGINA WEB PARA LA EMPRESA PLAY TOURS
+                        </h2>
+                        <p>El proyecto en grupo consistio en mejorar la pagina 
+                            de la empresa Play Tours usando los conceptos de User Experience (UX) User Interface(UI).</p>
+                    </article>
+                </div>
+            </section>
+            <h2>
+                <span>Proyectos de redes</span>
+            </h2>
+               <section class="sec-pro">
                     <article>
-                        <img class="foto2" src="/imagenes/proyecto1.PNG" alt="imagen de perfil">
+                        <img class="foto-pro" src="/imagenes/proyecto1.PNG" alt="imagen de perfil">
                     </article>
                     <div>
                         <article class="nombre">
                             <h2>
                                 PROPUESTA DE AMPLIACIÓN Y MEJORA DE LA COMUNICACIÓN Y EFICIENCIA OPERATIVA DE LA EMPRESA TINBET
                             </h2>
-                            <p>El proyecto consistio en mejorar la comunicacion de la empresa TINBET, se utilizo el programa de simulacion de redes Cisco Packet Tracer</p>
+                            <p>El proyecto en grupo consistio en mejorar la comunicacion
+                                 de la empresa TINBET, se utilizo el programa de simulacion de redes Cisco Packet Tracer</p>
                         </article>
                     </div>
                 </section>
-
-                <section class="pro">
+                
+                <section class="sec-pro">
                     <article>
-                        <img class="foto2" src="/imagenes/issacimagen.png" alt="imagen de perfil">
+                        <img class="foto-pro" src="/imagenes/proyecto3.PNG" alt="imagen de perfil">
                     </article>
                     <div>
                         <article class="nombre">
                             <h2>
-                                Nombre del proyecto
+                                PROPUESTA DE UNA ARQUITECTURA DE RED PARA MEJORAR 
+                                LA COMUNICACIÓN Y EFICIENCIA OPERATIVA DE LA EMPRESA MISHELL IMPORTACIONES
                             </h2>
-                            <p>Aca va la descripcion del proyecto</p>
+                            <p>El proyecto en grupo consistio en proponer mejoras en su calbleado estructurado de la empresa, diseño de topologia
+                                LAN, MAN, todo esto en el simulador Cisco Packet Tracert.
+                            </p>
                         </article>
                     </div>
                 </section>
@@ -75,16 +99,16 @@
                 <span>Habilidades</span>
             </h2>
             <section class="habilidades">
-                    <h3 class="hijo">
-                        <img class="icono" src="/imagenes/html.png" alt="">
+                    <h3 class="hijo-hab">
+                        <img class="icono-hijo" src="/imagenes/html.png" alt="">
                         HTML
                     </h3>
-                    <h3 class="hijo">
-                        <img class="icono" src="/imagenes/css.png" alt="">
+                    <h3 class="hijo-hab">
+                        <img class="icono-hijo" src="/imagenes/css.png" alt="">
                         CSS
                     </h3>
-                    <h3 class="hijo">
-                        <img class="icono" src="/imagenes/JS.png" alt="">
+                    <h3 class="hijo-hab">
+                        <img class="icono-hijo" src="/imagenes/JS.png" alt="">
                         JavaScript
                     </h3>
             </section>
@@ -99,7 +123,7 @@
                 <h4 class="contahij" id="correo">
                     joffregh3002@gmail.com
                 </h4>
-                <button class="bot" onclick="copiarAlPortapapeles()">Copiar</button>
+                <button class="bot" onclick="copiarAlPortapapeles()"><strong>COPIAR</strong></button>
                 <div class="tooltip" id="mensaje-copiado">Correo copiado al portapapeles</div>
             </div>
         </div>
@@ -123,7 +147,7 @@
         mensajeCopiado.style.opacity = 1;
         setTimeout(function() {
             mensajeCopiado.style.opacity = 0;
-        }, 2000); // Oculta el mensaje después de 2 segundos (ajusta según tus preferencias)
+        }, 1000); // Oculta el mensaje después de 1 segundos (ajusta según tus preferencias)
     }
 </script>
 
