--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joffre - Portafolio</title>
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/JS/java.js">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header>
