--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <main class="main">
         <section id="sobre-mi">
-            <img class="foto-perf" src="/imagenes/perfil.jpg" alt="imagen de perfil">
+            <img class="foto-perf" src="imagenes/perfil.jpg" alt="imagen de perfil">
             <article>
                 <h2>
-                    <img class="logo1" src="/imagenes/pngwing.com.png" alt="">
+                    <img class="logo1" src="imagenes/pngwing.com.png" alt="">
                     <span>Joffre Angelo Gavidia Huamali</span>
                 </h2>
                 <p>Actualmente soy estudiante de Ingeniería de Sistemas en la 
@@ -35,8 +35,8 @@
                 <span>Social</span>
             </h2>
             <nav class="opc-cont">
-                <a class="opciones-soci" href="https://www.linkedin.com/in/joffre-angelo-gavidia-huamali-b317472b1/" target="_blank"> <img class="logo3" src="/imagenes/link.png" alt="">LinkedIn</a>
-                <a class="opciones-soci" href="/doc/CV.pdf" target="_blank">Descargar CV</a>
+                <a class="opciones-soci" href="https://www.linkedin.com/in/joffre-angelo-gavidia-huamali-b317472b1/" target="_blank"> <img class="logo3" src="imagenes/link.png" alt="">LinkedIn</a>
+                <a class="opciones-soci" href="doc/CV.pdf" target="_blank">Descargar CV</a>
             </nav>
         </section>
 
@@ -46,7 +46,7 @@
             </h2>
             <section class="sec-pro">
                 <article>
-                    <img class="foto-pro" src="/imagenes/proyecto2.PNG" alt="imagen de perfil">
+                    <img class="foto-pro" src="imagenes/proyecto2.PNG" alt="imagen de perfil">
                 </article>
                 <div>
                     <article class="nombre">
@@ -63,7 +63,7 @@
             </h2>
                <section class="sec-pro">
                     <article>
-                        <img class="foto-pro" src="/imagenes/proyecto1.PNG" alt="imagen de perfil">
+                        <img class="foto-pro" src="imagenes/proyecto1.PNG" alt="imagen de perfil">
                     </article>
                     <div>
                         <article class="nombre">
@@ -78,7 +78,7 @@
                 
                 <section class="sec-pro">
                     <article>
-                        <img class="foto-pro" src="/imagenes/proyecto3.PNG" alt="imagen de perfil">
+                        <img class="foto-pro" src="imagenes/proyecto3.PNG" alt="imagen de perfil">
                     </article>
                     <div>
                         <article class="nombre">
@@ -99,15 +99,15 @@
             </h2>
             <section class="habilidades">
                     <h3 class="hijo-hab">
-                        <img class="icono-hijo" src="/imagenes/html.png" alt="">
+                        <img class="icono-hijo" src="imagenes/html.png" alt="">
                         HTML
                     </h3>
                     <h3 class="hijo-hab">
-                        <img class="icono-hijo" src="/imagenes/css.png" alt="">
+                        <img class="icono-hijo" src="imagenes/css.png" alt="">
                         CSS
                     </h3>
                     <h3 class="hijo-hab">
-                        <img class="icono-hijo" src="/imagenes/JS.png" alt="">
+                        <img class="icono-hijo" src="imagenes/JS.png" alt="">
                         JavaScript
                     </h3>
             </section>
