--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <img class="logo1" src="imagenes/pngwing.com.png" alt="">
                     <span>Joffre Angelo Gavidia Huamali</span>
                 </h2>
-                <p>Actualmente soy estudiante de Ingeniería de Sistemas en la 
+                <p>Actualmente, soy estudiante de Ingeniería de Sistemas en la 
                     <strong>Universidad de Huánuco (UDH)</strong>, me encuentro cursando el octavo ciclo. 
-                    Además soy una persona responsable, con principios y valores, capaz de trabajar bajo presión y 
-                    de ser útil en la labor que me confieren, con facilidad de expresión verbal y escrita.</p>
+                    Soy una persona responsable, con principios y valores, capaz de trabajar bajo presión y 
+                    ser útil en las tareas que se me asignan. Además, poseo facilidad tanto en la expresión verbal como escrita.</p>
             </article>
         </section>
         <section id="social">
@@ -35,7 +35,7 @@
                 <span>Social</span>
             </h2>
             <nav class="opc-cont">
-                <a class="opciones-soci" href="https://www.linkedin.com/in/joffre-angelo-gavidia-huamali-b317472b1/" target="_blank"> <img class="logo3" src="imagenes/link.png" alt="">LinkedIn</a>
+                <a class="opciones-soci" href="https://www.linkedin.com/in/joffre-angelo-gavidia-huamali-b317472b1/" target="_blank"> <img class="logo3" src="imagenes/link.png" alt="logo de LinkedIn">LinkedIn</a>
                 <a class="opciones-soci" href="doc/CV.pdf" target="_blank">Descargar CV</a>
             </nav>
         </section>
@@ -46,15 +46,15 @@
             </h2>
             <section class="sec-pro">
                 <article>
-                    <img class="foto-pro" src="imagenes/proyecto2.PNG" alt="imagen de perfil">
+                    <img class="foto-pro" src="imagenes/proyecto2.PNG" alt="imagen del proyecto1">
                 </article>
                 <div>
                     <article class="nombre">
                         <h2>
                             PAGINA WEB PARA LA EMPRESA PLAY TOURS
                         </h2>
-                        <p>El proyecto en grupo consistio en mejorar la pagina 
-                            de la empresa Play Tours usando los conceptos de User Experience (UX) User Interface(UI).</p>
+                        <p>El proyecto en grupo consistió en mejorar la página web 
+                            de la empresa Play Tours utilizando los conceptos de Experiencia de Usuario (UX) e Interfaz de Usuario (UI).</p>
                     </article>
                 </div>
             </section>
@@ -63,22 +63,22 @@
             </h2>
                <section class="sec-pro">
                     <article>
-                        <img class="foto-pro" src="imagenes/proyecto1.PNG" alt="imagen de perfil">
+                        <img class="foto-pro" src="imagenes/proyecto1.PNG" alt="imagen del proyecto2">
                     </article>
                     <div>
                         <article class="nombre">
                             <h2>
                                 PROPUESTA DE AMPLIACIÓN Y MEJORA DE LA COMUNICACIÓN Y EFICIENCIA OPERATIVA DE LA EMPRESA TINBET
                             </h2>
-                            <p>El proyecto en grupo consistio en mejorar la comunicacion
-                                 de la empresa TINBET, se utilizo el programa de simulacion de redes Cisco Packet Tracer</p>
+                            <p>El proyecto en grupo consistió en mejorar la comunicación de la empresa TINBET. Para 
+                                 ello, se utilizó el programa de simulación de redes Cisco Packet Tracer.</p>
                         </article>
                     </div>
                 </section>
                 
                 <section class="sec-pro">
                     <article>
-                        <img class="foto-pro" src="imagenes/proyecto3.PNG" alt="imagen de perfil">
+                        <img class="foto-pro" src="imagenes/proyecto3.PNG" alt="imagen del proyecto3">
                     </article>
                     <div>
                         <article class="nombre">
@@ -86,8 +86,9 @@
                                 PROPUESTA DE UNA ARQUITECTURA DE RED PARA MEJORAR 
                                 LA COMUNICACIÓN Y EFICIENCIA OPERATIVA DE LA EMPRESA MISHELL IMPORTACIONES
                             </h2>
-                            <p>El proyecto en grupo consistio en proponer mejoras en su calbleado estructurado de la empresa, diseño de topologia
-                                LAN, MAN, todo esto en el simulador Cisco Packet Tracert.
+                            <p>El proyecto en grupo consistió en proponer mejoras en el cableado estructurado de la 
+                                empresa, así como en el diseño de la topología de LAN y MAN. Todo esto se llevó a 
+                                cabo en el simulador Cisco Packet Tracer.
                             </p>
                         </article>
                     </div>
@@ -99,15 +100,15 @@
             </h2>
             <section class="habilidades">
                     <h3 class="hijo-hab">
-                        <img class="icono-hijo" src="imagenes/html.png" alt="">
+                        <img class="icono-hijo" src="imagenes/html.png" alt="logo de HTML">
                         HTML
                     </h3>
                     <h3 class="hijo-hab">
-                        <img class="icono-hijo" src="imagenes/css.png" alt="">
+                        <img class="icono-hijo" src="imagenes/css.png" alt="logo de CSS">
                         CSS
                     </h3>
                     <h3 class="hijo-hab">
-                        <img class="icono-hijo" src="imagenes/JS.png" alt="">
+                        <img class="icono-hijo" src="imagenes/JS.png" alt="logo de JavaScript">
                         JavaScript
                     </h3>
             </section>
