--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
                         JavaScript
                     </h3>
             </section>
+            <section>
+                <h2>
+                    <span>Conocimientos y aptitudes</span>
+                </h2>
+                <nav class="opc-cont2">
+                    <a class="opciones-soci2" >Microsoft 365</a>
+                    <a class="opciones-soci2" >Laravel</a>
+                    <a class="opciones-soci2" >Adobe Photoshop</a>
+                    <a class="opciones-soci2" >MySQL Workbench</a>
+                    <a class="opciones-soci2" >Gestion de proyectos</a>
+                </nav>
+            </section>
         </section>
     
     <footer id="cont">
